# personal-website

./: CHANGELOG.md  README.md  cabal.project  personal-website.cabal
.github/actions/spelling/: README.md  excludes.txt  only.txt
.github/actions/spelling/allow/: Code-Block-Bindings.txt  Domain-Terms.txt  Haskell.txt  Programming.txt
.github/actions/spelling/patterns/: latex.txt  other.txt
.github/workflows/: haskell.yaml  mega-linter.yaml
blog/: 12022-Q1.md  12022-Q2.md  12022-Q3.md  12022-Q4.md  12023-03-29-signatory.md  12023-Q1.md  hello-world.md  perm-parser.md  phd-matriculation.md
config/: .csscomb.json  .jscpd.json  .markdown-link-check.json  .markdownlint.json  .stan.toml  .stylelintrc.json  .weeder.dhall  .yamllint.yml  cabal.project.CI  cabal.project.development  cabal.project.oldest  cabal.project.release  cabal.project.typecheck  fourmolu.yaml  mega-linter.yaml
css/: cv.css  style.css
data/css/: blog.css  cv.css  style.css
data/fav/: browserconfig.xml  manifest.json
data/generator/: perm-parser-00.dot  perm-parser-01.dot  perm-parser-02.dot  perm-parser-03.dot
data/mold/: blog-post.html  blog-post.latex  cv.latex  page-format-list.html
data/page/: 400.html  500.html  about.md  cv.md
data/template/: blog-list.html  blog-post.html  blog-post.latex  blog-post.md  cv.html  cv.latex  default.html  page-format-list.html
doc/: CHANGELOG.md  LICENSE  README.md
mold/: blog-list.html  blog-post.adoc  cv.html  default.html  haiku.html  sitemap.xml
page/: 404.html  about.md  cv.md
src/: AssetIncludes.hs  SiteBuilder.hs
src/Compiler/: AsciiDoc.hs  BlogPostContext.hs  Constants.hs  EPUB.hs  Generic.hs  HTML.hs  Markdown.hs  PDF.hs  Textual.hs
src/Compiler/Transformation/: HeaderExclusion.hs  Table.hs
src/Indexer/: Feed.hs  HypertextAccess.hs  Page.hs  RewriteRules.hs  Robots.hs  SiteMap.hs
src/PageBuilder/: About.hs  Blog.hs  CV.hs  Errors.hs  NotFound.hs
