Cabal-Version: 3.4
Name:          personal-website
Version:       2.2.16
Stability:     Stable
Build-Type:    Simple

Author:        Alex Washburn <github@recursion.ninja>
Copyright:     (c) 2015-2022 Alex Washburn
License:       CC-BY-SA-4.0
License-File:  doc/LICENSE

Maintainer:    Alex Washburn <github@recursion.ninja>
Homepage:      https://recursion.ninja
Bug-Reports:   https://github.com/recursion-ninja/personal-website

Synopsis:      Website for Alex Washburn's recursion.ninja domain
Description:   The source code for Alex Washburn's web presence site <https://recursion.ninja>.
               Static site is constructed using Hakyll <http://jaspervdj.be/hakyll>.
               Designed for simple blog post authoring and publishing.
Category:
    Hakyll
    Markdown
    Pandoc
    Web

Tested-With:
    GHC == 9.4.5
    GHC == 9.2.7
    GHC == 9.0.2

Data-Files:
    blog/*.md
    data/css/*.css
    data/fav/browserconfig.xml
    data/fav/favicon.ico
    data/fav/manifest.json
    data/fav/*.png
    data/img/*.png
    data/img/*.svg
    data/page/*.html
    data/template/*.adoc
    data/template/*.html
    data/template/*.latex
    data/template/*.md
    data/template/*.xml

Extra-Doc-Files:
    doc/CHANGELOG.md
    doc/README.md


Executable personal-website

  main-is:
    SiteBuilder.hs

  build-depends:
    base >= 4.14 && < 5,
    binary >= 0.8.7.0,
    bytestring >= 0.10.12.1,
    cryptonite >= 0.25,
    filepath >= 1.4.2.1,
    hakyll >= 4.13.4.1,
    pandoc >= 3.1,
    pandoc-types >= 1.21,
    process >= 1.6.7.0,
    text >= 1.2.3.2,
    time >= 0.9.2

  default-extensions:
    DerivingStrategies
    LambdaCase
    NoGeneralizedNewtypeDeriving
    UnicodeSyntax

  default-language:
    GHC2021

  ghc-options:
    -- Usability flags
    -fdiagnostics-color=always
    -fhide-source-paths

    -- Threading can cause cache invalidation issues when building site
--    -threaded

    -- Optimization flags
    -fexcess-precision
    -fexpose-all-unfoldings
    -flate-specialise
    -fmax-simplifier-iterations=16
    -foptimal-applicative-do
    -fspec-constr-count=8
    -fspec-constr-keen
    -fspecialize-aggressively
    -fstatic-argument-transformation

    -- Sanity check warnings
    --   1. Include all warnings by default
    -Weverything
    --   2. Exclude the undesirable warnings
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-import-lists
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-type-defaults
    -Wno-unsafe

  if impl(ghc >=9.2)
    ghc-options:
      -Wno-missing-kind-signatures

  if impl(ghc >=9.4)
    ghc-options:
      -Wredundant-strictness-flags

  hs-source-dirs:
    src

  autogen-modules:
    Paths_personal_website

  other-modules:
    AssetIncludes
    Compiler.AsciiDoc
    Compiler.BlogPostContext
    Compiler.Constants
    Compiler.EPUB
    Compiler.Generic
    Compiler.HTML
    Compiler.Markdown
    Compiler.PDF
    Compiler.Textual
    Compiler.Transformation.HeaderExclusion
    Compiler.Transformation.Table
    Indexer.Feed
    Indexer.Page
    Indexer.HypertextAccess
    Indexer.Robots
    Indexer.SiteMap
    PageBuilder.About
    PageBuilder.Blog
    PageBuilder.CV
    PageBuilder.Errors
    Paths_personal_website
