cabal-version:      3.4
name:               personal-website
version:            2.3.1
stability:          Stable
build-type:         Simple
author:             Alex Washburn <github@recursion.ninja>
copyright:          (c) 2015-2022 Alex Washburn
license:            CC-BY-SA-4.0
license-file:       doc/LICENSE
maintainer:         Alex Washburn <github@recursion.ninja>
homepage:           https://recursion.ninja
bug-reports:        https://github.com/recursion-ninja/personal-website
synopsis:           Website for Alex Washburn's recursion.ninja domain
description:
  The source code for Alex Washburn's web presence site <https://recursion.ninja>.
  Static site is constructed using Hakyll <http://jaspervdj.be/hakyll>.
  Designed for simple blog post authoring and publishing.

category:
  Hakyll
  Markdown
  Pandoc
  Web

tested-with:
  ghc ==9.0.2
  ghc ==9.2.8
  ghc ==9.4.6
  ghc ==9.8.1
  ghc ==9.10.1

data-files:
  blog/*.md
  data/css/*.css
  data/fav/*.png
  data/fav/browserconfig.xml
  data/fav/favicon.ico
  data/fav/manifest.json
  data/img/*.png
  data/img/*.svg
  data/page/*.html
  data/template/*.adoc
  data/template/*.html
  data/template/*.latex
  data/template/*.md
  data/template/*.xml

extra-doc-files:
  doc/CHANGELOG.md
  doc/README.md

common GHC-Flags-Usability
  ghc-options:
    -fdiagnostics-color=always
    -fhide-source-paths

-- Note: Do not use the '-threaded' GHC option!
-- Threading can cause cache invalidation issues when building site
common GHC-Flags-Optimization
  ghc-options:
    -O2
    -fexcess-precision
    -fexpose-all-unfoldings
    -flate-specialise
--    -fmax-simplifier-iterations=16
--    -foptimal-applicative-do
--    -fspec-constr-count=8
    -fspec-constr-keen
    -fspecialize-aggressively
    -fstatic-argument-transformation

-- Sanity check warnings
--   1. Include all warnings by default
--   2. Exclude the undesirable warnings
common GHC-Flags-Warnings
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-type-defaults
    -Wno-unsafe

  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures

  if impl(ghc >= 9.4)
    ghc-options:
      -Wredundant-strictness-flags

executable personal-website
  import:
    GHC-Flags-Optimization,
    GHC-Flags-Usability,
    GHC-Flags-Warnings,

  main-is:
    SiteBuilder.hs

  build-depends:
    base >=4.16 && <5,
    binary >=0.8.9.0,
    bytestring >=0.11.4.0,
    cryptonite >=0.30,
    filepath >=1.4.2.2,
    hakyll >=4.16.0.0,
    pandoc >=3.0,
    pandoc-types >=1.23,
    process >=1.6.16.0,
    text >=1.2.5.0,
    time >=1.11.1.1,

  default-extensions:
    UnicodeSyntax
    LambdaCase
    DerivingStrategies
    NoGeneralizedNewtypeDeriving

  default-language:
    GHC2021

  hs-source-dirs:
    src

  if os(darwin)
    ld-options:
      "-Wl,-no_fixup_chains"

  autogen-modules:
    Paths_personal_website

  other-modules:
    AssetIncludes
    Compiler.AsciiDoc
    Compiler.BlogPostContext
    Compiler.Constants
    Compiler.EPUB
    Compiler.Generic
    Compiler.HTML
    Compiler.Markdown
    Compiler.PDF
    Compiler.Textual
    Compiler.Transformation.HeaderExclusion
    Compiler.Transformation.Table
    Indexer.Feed
    Indexer.HypertextAccess
    Indexer.Page
    Indexer.Robots
    Indexer.SiteMap
    PageBuilder.About
    PageBuilder.Blog
    PageBuilder.CV
    PageBuilder.Errors
    Paths_personal_website
